# pydantic-fixedwidth

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Justfile  Makefile  README.md  flake.nix  noxfile.py  pyproject.toml  renovate.json
.devcontainer/: devcontainer.json
.devcontainer.example/: devcontainer.json  onCreateCommand.sh
.github/workflows/: ci.yaml  prepare-release.yaml  release.yaml
.vscode.example/: extensions.json
pydantic_fixedwidth/: __init__.py  fixedwidth.py
tests/: test_fixedwidth.py
