[project]
name = "pydantic-fixedwidth"
description = "Custom Pydantic models for parsing and serializing fixed-width format of data."
version = "0.3.0"
authors = [{ name = "Yuchan Lee", email = "lasuillard@gmail.com" }]
readme = "README.md"
license = "MIT"
requires-python = ">=3.10, <4.0"
dependencies = ["pydantic>=2,<3"]

[dependency-groups]
dev = [
  "mypy==2.1.0",
  "ruff==0.15.15",
  "coverage==7.14.1",
  "pytest-cov==7.1.0",
  "pytest-sugar==1.1.1",
  "pytest==9.0.3",
]

[project.urls]
Homepage = "https://github.com/lasuillard-s/pydantic-fixedwidth"
Repository = "https://github.com/lasuillard-s/pydantic-fixedwidth.git"
Issues = "https://github.com/lasuillard-s/pydantic-fixedwidth/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pydantic_fixedwidth"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "ANN401",
  "COM812", # Formatting conflict
  "D105",
  "FIX002",
  "TD003",
]

[tool.ruff.lint.extend-per-file-ignores]
"**/__init__.py" = ["D104"]
"tests/*" = ["D", "S101", "PLR2004", "SLF001"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
exclude = ['^\.venv/*']
namespace_packages = true
check_untyped_defs = true
disallow_untyped_defs = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
warn_return_any = true
show_error_codes = true
strict_optional = true
no_implicit_reexport = true
explicit_package_bases = true

[tool.pytest.ini_options]
addopts = [
  "--strict-markers",
  "--doctest-modules",
  "--cov",
  "--cov-report=term",
  "--cov-report=xml",
  "--show-capture=no",
  "--junitxml=junit.xml",
  "-rs",
]
testpaths = ["tests"]

[tool.coverage.run]
include = ["pydantic_fixedwidth/*"]
omit = ["*tests*"]
branch = true

[tool.coverage.report]
skip_empty = true
show_missing = true
exclude_lines = ["pragma: no cover", "if TYPE_CHECKING"]
